bootstrap/cluster-resources/in-cluster/dev-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: dev
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
