bootstrap/cluster-resources/in-cluster/prod-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  creationTimestamp: null
  name: prod
spec: {}
status: {}
