bootstrap/cluster-resources/in-cluster/treafik-helm-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  creationTimestamp: null
  name: treafik-helm
spec: {}
status: {}
