bootstrap/cluster-resources/in-cluster/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
  labels:
    app.kubernetes.io/name: argocd-server
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "4"
    cert-manager.io/cluster-issuer: route53-letsencrypt-production
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argo.anotherlife.pl`)
      services:
        - kind: TraefikService #Service
          name: argocd-server
          port: 80
      middlewares:
        - name: chain-traefik-dashboard #traefik-dashboard-auth  #chain-traefik-dashboard
          namespace: traefik
  tls:
    #secretName: letsencrypt-production
    options:
      name: tls-ver13
      namespace: traefik
    domains:
      - main: anotherlife.pl
        sans:
          - .anotherlife.pl
